2024-09-07 csv export for frd
2024-09-08 working on job monitor dat tab
2024-09-09 csv export for dat
2024-09-09 working on dat plot
######### ------  Release 2024.9

2024-09-27 working on reading/saving ccx core data into .cub
2024-09-28 working on reading/saving ccx core data into .cub
2024-09-29 working on reading/saving ccx core data into .cub
2024-10-01 working on reading/saving ccx core data into .cub
2024-10-02 working on reading/saving ccx core data into .cub
2024-10-04 working on reading/saving ccx core data into .cub
2024-10-04 new method to get the component version from the core
2024-10-05 working on reading/saving ccx core data into .cub
2024-10-05 found autocleanup issue on windows
2024-10-07 fixed autocleanup issue on windows
2024-10-10 working on reading/saving ccx core data into .cub
2024-10-11 working on reading/saving ccx core data into .cub
2024-10-12 bug fix crash vtk writer in parallel
2024-10-12 working on reading/saving ccx core data into .cub
2024-10-19 adding progressbar for saving and reading cub5
2024-10-20 updating to paraview 5.13.1, due to github large file limit, we need to exclude paraview binaries from the repo, the need to be in a local directory for the build, look at cmake file
2024-10-21 fixing bug in frd reader. in parallel some blocks without nodal results where skipped while reading the headers which resulted in a crash
######### ------  Release 2024.10

2024-11-08 fixing symbols in the material management on windows
2024-11-08 working on material library
2024-11-14 fixing plot labels, adding "" automatically to the plot command
2024-11-14 working on material library
2024-11-16 working on material library
2024-11-19 working on material library
2024-11-21 working on material library
2024-11-22 adding materials to the highlighting
2024-11-22 working on material library gui
2024-11-25 working on material library gui
2024-11-27 working on material library gui
2024-11-28 working on material library gui